--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "alt-blog-api",
   "version": "1.0.0",
-  "main": "./src/server.js",
+  "main": "./src/index.js",
   "repository": "https://github.com/omotega/alt-blog-api.git",
   "author": "omotega <tomoyibo@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev":"nodemon ./src/server.js"
+    "dev": "nodemon ./src/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0"
   },
