--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./src/index.js",
-    "start":"NODE_ENV=production node ./src/index.js"
+    "start": "NODE_ENV=production node ./src/index.js",
+    "test": "NODE_ENV=test jest --detectOpenHandles --coverage"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -15,6 +16,7 @@
     "express": "^4.18.2",
     "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^8.9.5",
     "mongoose": "^6.7.0"
   },
   "devDependencies": {
